Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-106

maxFileSize has bad type in SizeBasedTriggeringPolicy file

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Trivial
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Appender
    • None
    • Linux

    Description

      in file sizebasedtriggeringpolicy.h at line 47
      //////////////
      As the documentation declared, maxFileSize should be size_t instead of long
      //////////////
      class LOG4CXX_EXPORT SizeBasedTriggeringPolicy : public TriggeringPolicy {
      DECLARE_LOG4CXX_OBJECT(SizeBasedTriggeringPolicy)
      BEGIN_LOG4CXX_CAST_MAP()
      LOG4CXX_CAST_ENTRY(SizeBasedTriggeringPolicy)
      LOG4CXX_CAST_ENTRY_CHAIN(TriggeringPolicy)
      END_LOG4CXX_CAST_MAP()

      protected:
      long maxFileSize;
      //////////////

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            alkpone Alban Seurat
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: