LOGCXX-106: Inconsistent value type for maxFileSize